--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 :root{
-  font-family: 'Red Hat Display', sans-serif;
+ 
   /*Primary colors*/
   --Pale-blue:hsl(225, 100%, 94%);
   --Bright-blue:hsl(245, 75%, 52%);
@@ -56,4 +56,37 @@ main p{
   padding: 12px;
   border-radius: 12px;
   background-color: var(--Very-pale-blue);
+}
+.plan:nth-child(3)  {
+color: var(--a-color);
+font-weight: 900;
+align-items: center;
+}
+.plan_type-plan :nth-child(1){
+color: var(--Dark-blue);
+font-weight: 900;
+}
+.plan_type-plan :nth-child(2){
+  color: var(--Desaturated-blue);
+}
+.button-container{
+  display:flex;
+  flex-direction: column;
+  padding: 0 24px 24px 24px;
+}
+.button-container > button{
+  font-family: 'Red Hat Display', sans-serif;
+  height: 56px;
+  border-radius: 12px;
+  margin-bottom: 4px;
+  border: none;
+  
+}
+.button-container_payment{
+background-color: var(--Bright-blue);
+color: var(--Very-pale-blue);
+}
+.button-container_cancel{
+background-color: var(--Very-pale-blue);
+color: var(--Desaturated-blue);
 }
